--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>HTML Form Elements</title>
+  <title>Secret Personal Data Stealing Newsletter</title>
   <meta charset="utf-8">
   <meta name="viewpoint">
   <link rel="stylesheet" media="screen" href="css/screen.css">
@@ -16,7 +16,7 @@
 <body>
 <main id="content">
   <form method="get" action="#null">
-    <h1>Secret Personal Data Stealing Newsletter</h1>
+    <h1>STOP INTERNET HACKING NEWSLETTER</h1>
     <p>
       Sign up and learn 5 secrets to fight Internet Hackers!
     </p>
