--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewpoint">
   <link rel="stylesheet" media="screen" href="css/screen.css">
-  <link rel="stylesheet" media="screen" href="css/_normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,27 +13,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-<main id="content">
-  <form method="get" action="#null">
-    <h1>STOP INTERNET HACKING NEWSLETTER</h1>
-    <p>
-      Sign up and learn 5 secrets to fight Internet Hackers!
-    </p>
-    <ol>
-      <li id="input-email">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" pattern="^.+@.+$" />
-      </li>
-      <li id="input-age-verification">
-        <input type="checkbox" id="age-verification" name="age-verification" value="18" />
-        <label for="age-verification">I am over 18 years old</label>
-      </li>
-      <li id="input-submit">
-        <input type="submit" name="submit" id="submit" value="Subscribe" />
-      </li>
-    </ol>
-  </form>
-</main>
+  <main id="content">
+    <div class="form-wrapper">
+      <form method="get" action="#null">
+        <h1>STOP INTERNET HACKING NEWSLETTER</h1>
+        <p>Sign up and learn 5 secrets to fight Internet Hackers!</p>
+        <ol>
+          <li id="input-email">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" pattern="^.+@.+$" required />
+          </li>
+          <li id="input-birthday">
+            <label for="birthday">Birthday</label>
+            <input type="date" name="birthday" id="birthday" required />
+          </li>
+          <li id="input-ssn">
+            <label for="ssn">Social Security Number (SSN)</label>
+            <input type="text" name="ssn" id="ssn" pattern="\d{3}-\d{2}-\d{4}" placeholder="123-45-6789" required />
+          </li>
+          <li id="input-address">
+            <label for="address">Address</label>
+            <input type="text" name="address" id="address" required />
+          </li>
+          <li id="input-age-verification">
+            <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
+            <label for="age-verification">I am over 18 years old</label>
+          </li>
+          <li id="input-submit">
+            <input type="submit" name="submit" id="submit" value="Subscribe" />
+          </li>
+        </ol>
+      </form>
+    </div>
+  </main>   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/site.js"></script>
 </body>
