--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
   <meta name="viewpoint">
   <link rel="stylesheet" media="screen" href="css/screen.css">
   <link rel="stylesheet" media="screen" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Micro+5&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
   <main id="content">
     <div class="form-wrapper">
       <form method="get" action="#null">
         <h1>STOP INTERNET HACKING NEWSLETTER</h1>
-        <p>Sign up and learn 5 secrets to fight Internet Hackers!</p>
+        <p>Sign up and learn secrets to fight Hackers!</p>
         <ol>
           <li id="input-email">
             <label for="email">Email</label>
