--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport">
   <link rel="stylesheet" media="screen" href="css/screen.css">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&family=Space+Grotesk:wght@300..700&display=swap" rel="style">
 </head>
 <body>
   <main id="content">
