--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
-<head>
-  <title>Secret Personal Data Stealing Newsletter</title>
-  <meta charset="utf-8">
-  <meta name="viewport">
-  <link rel="stylesheet" media="screen" href="css/screen.css">
-  <link rel="stylesheet" media="screen" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sixtyfour+Convergence&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-<body>
-  <main id="content">
-    <div class="form-wrapper">
-      <form method="get" action="#null">
-        <h1>STOP INTERNET HACKING NEWSLETTER</h1>
-        <p>Sign up and learn secrets to fight Hackers!</p>
-        <p>To start the fight, please enter the following information!</p>
-        <ol>
-          <li id="input-email">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" pattern="^.+@.+$" required autocomplete="email"/>
-          </li>
-          <li id="input-birthday">
-            <label for="birthday">Birthday</label>
-            <input type="date" name="birthday" id="birthday" required />
-          </li>
-          <li id="input-ssn">
-            <label for="ssn">Social Security Number (SSN)</label>
-            <input type="text" name="ssn" id="ssn" pattern="\d{3}-\d{2}-\d{4}" placeholder="123-45-6789" required />
-          </li>
-          <li id="input-address">
-            <label for="address">Address</label>
-            <input type="text" name="address" id="address" required />
-          </li>
-          <li id="input-age-verification">
-            <label for="age-verification">I am over 18 years old</label>
-            <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
-          </li>
-          <li id="input-submit">
-            <input type="submit" name="submit" id="submit" value="Subscribe" />
-          </li>
-        </ol>
-      </form>
-    </div>
-  </main>   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="js/site.js"></script>
-</body>
+  <head>
+    <title>Secret Personal Data Stealing Newsletter</title>
+    <meta charset="utf-8">
+    <meta name="viewport">
+    <link rel="stylesheet" media="screen" href="css/screen.css">
+    <link rel="stylesheet" media="screen" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sixtyfour+Convergence&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <main id="content">
+      <div class="form-wrapper">
+        <form method="get" action="#null">
+          <h1>STOP INTERNET HACKING NEWSLETTER</h1>
+          <p>Sign up and learn secrets to fight Hackers!</p>
+          <p>To start the fight, please enter the following information!</p>
+          <ol>
+            <li id="input-email">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" pattern="^.+@.+$" required autocomplete="email"/>
+            </li>
+            <li id="input-birthday">
+              <label for="birthday">Birthday</label>
+              <input type="date" name="birthday" id="birthday" required />
+            </li>
+            <li id="input-ssn">
+              <label for="ssn">Social Security Number (SSN)</label>
+              <input type="text" name="ssn" id="ssn" pattern="\d{3}-\d{2}-\d{4}" placeholder="123-45-6789" required />
+            </li>
+            <li id="input-address">
+              <label for="address">Address</label>
+              <input type="text" name="address" id="address" required />
+            </li>
+            <li id="input-age-verification">
+              <label for="age-verification">I am over 18 years old</label>
+              <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
+            </li>
+            <li id="input-submit">
+              <input type="submit" name="submit" id="submit" value="Subscribe" />
+            </li>
+          </ol>
+        </form>
+      </div>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/site.js"></script>
+  </body>
 </html>
