--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ol>
             <li id="input-email">
               <label for="email">Email</label>
-              <input type="email" name="email" id="email" pattern="^.+@.+$" required autocomplete="email"/>
+              <input type="email" name="email" id="email" pattern="^.+@.+$" required autocomplete="email">
             </li>
             <li id="input-birthday">
               <label for="birthday">Birthday</label>
@@ -28,18 +28,18 @@
             </li>
             <li id="input-ssn">
               <label for="ssn">Social Security Number (SSN)</label>
-              <input type="text" name="ssn" id="ssn" pattern="\d{3}-\d{2}-\d{4}" placeholder="123-45-6789" required />
+              <input type="text" name="ssn" id="ssn" pattern="\d{3}-\d{2}-\d{4}" placeholder="123-45-6789" required>
             </li>
             <li id="input-address">
               <label for="address">Address</label>
-              <input type="text" name="address" id="address" required />
+              <input type="text" name="address" id="address" required>
             </li>
             <li id="input-age-verification">
               <label for="age-verification">I am over 18 years old</label>
-              <input type="checkbox" id="age-verification" name="age-verification" value="18" required />
+              <input type="checkbox" id="age-verification" name="age-verification" value="18" required>
             </li>
             <li id="input-submit">
-              <input type="submit" name="submit" id="submit" value="Subscribe" />
+              <input type="submit" name="submit" id="submit" value="ENTER THE FIGHT NOW!">
             </li>
           </ol>
         </form>
