--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Secret Personal Data Stealing Newsletter</title>
     <meta charset="utf-8">
-    <meta name="viewport">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="screen" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
             </li>
             <li id="input-birthday">
               <label for="birthday">Birthday</label>
-              <input type="date" name="birthday" id="birthday" required />
+              <input type="date" name="birthday" id="birthday" required>
             </li>
             <li id="input-ssn">
               <label for="ssn">Social Security Number (SSN)</label>
